src/www/static/css/Procurement.css
.cleanInputCell input {
    border: 0;
    height: 100%;
    width: 100%;
}

.navbar {
    background-color: #C75B12 !important;
}

.errbar {
    background-color: #be2d28;
    height: 3.2em;
    overflow: auto;
}

.errtext {
    color: white;
    text-align: center;
    margin-bottom: 0px !important;
    margin-top: auto;
    padding: .8em;
    font-weight: bold;
}

.btn-primary {
    background-color: #E98300 !important;
    border: none;
}

.btn-success {
    background-color: #69BE28 !important;
}

.btn-danger {
    background-color: #be2d28 !important;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0,0,0,0.7);
}

.modal-content {
  position: relative;
  background-color: #fefefe;
  margin: auto;
  padding: 0;
  width: 40%;
  max-width: 1200px;
}

.login-modal {
  padding-top: 150px;
  display: block;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  position: fixed;
  overflow: auto;
  background-color: rgb(0,0,0,0.7);
  background-image: url('/images/utd-pool.jpg');
  background-size: 100% 100%;
}

.login-content {
  background-color: rgb(150,150,150,0.7);
  height: 350px;
  width: 350px;
  padding: 20px;
  position: relative;
  margin: auto;
  color: black;
}

.login-content > input,
.login-content > .row,
.login-content > .btn {
    width: 100%;
    margin-left: 0;
    padding-left: 0;
    padding-right: 0;
}

.login-content p,
.login-content label {
    margin-bottom: 0;
}

.interfaceDiv {
    margin: 2%;
    box-sizing: border-box;
}

.selectBox {
  position: relative;
}

.selectBox select {
  width: 100%;
}

.overSelect {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
}

#checkboxes {
  display: none;
  border: 1px #dadada solid;
  height:100px;
  overflow-y:scroll;
}

#checkboxes label {
  display: block;
}

#checkboxes label:hover {
  background-color: #1e90ff;
}

